# University-of-Technology-Poznan

./: README.md
Lab_1/: README.md  branch_file.txt
Lab_1/My work/: plik.txt
Lab_2/my_step_2/: Makefile  Polygon.cpp  exe  step_2_code
Lab_2/my_step_3/: CMakeCache.txt  CMakeLists.txt  Makefile  Polygon.h  Triangle.cpp  Triangle.h  cmake_install.cmake  exe  main.cpp  step_3_code
Lab_2/my_step_4/: CMakeLists.txt  step_4_code
Lab_2/my_step_4/include/: Rectangle.h
Lab_2/my_step_4/src/: Rectangle.cpp
